--- a/RDataScientistTrack1.Rmd
+++ b/RDataScientistTrack1.Rmd
@@ -2994,3 +2994,243 @@ states_upper <- toupper(states)
 tolower(states_upper)
 ```
 
+```{r}
+# Copy of students2: students3
+students3 <- students2
+
+# Look at the head of students3
+head(students3)
+
+# Detect all dates of birth (dob) in 1997
+str_detect(students3$dob,"1997",negate = FALSE)
+
+# In the sex column, replace "F" with "Female" ...
+students3$sex <- str_replace(students3$sex, "F", "Female")
+
+# ... and "M" with "Male"
+students3$sex <- str_replace(students3$sex, "M", "Male")
+
+# View the head of students3
+head(students3)
+```
+
+```{r}
+social_df <- read.csv("Cleaning Data in R/social_df.csv", header = TRUE)
+is.na(social_df)
+
+# Call is.na() on the full social_df to spot all NAs
+is.na(social_df)
+
+# Use the any() function to ask whether there are any NAs in the data
+any(is.na(social_df))
+
+# View a summary() of the dataset
+summary(social_df)
+
+# Call table() on the status column
+table(social_df$status)
+```
+
+```{r}
+# Replace all empty strings in status with NA
+social_df$status[social_df$status == ""] <- NA
+
+# Print social_df to the console
+social_df
+
+# Use complete.cases() to see which rows have no missing values
+complete.cases(social_df)
+
+# Use na.omit() to remove all rows with any missing values
+na.omit(social_df)
+```
+
+```{r}
+
+# View a histogram of the age variable
+students4 <- read.csv("Cleaning Data in R/students4.csv")
+hist(students4$age)
+head(students4)
+# View a histogram of the absences variable
+hist(students4$absences)
+
+# View a histogram of absences, but force zeros to be bucketed to the right of zero
+hist(students4$absences)
+hist(students4$absences,right = FALSE)
+```
+
+```{r}
+# View a boxplot of age
+boxplot(students4$age)
+
+# View a boxplot of absences
+boxplot(students4$absences)
+```
+
+```{r}
+weather <- read.csv("Cleaning Data in R/Weather.csv")
+# Verify that weather is a data.frame
+class(weather)
+
+# Check the dimensions
+dim(weather)
+
+# View the column names
+names(weather)
+```
+
+```{r}
+# View the structure of the data
+str(weather)
+
+# Load dplyr package
+library(dplyr)
+
+# Look at the structure using dplyr's glimpse()
+glimpse(weather)
+
+# View a summary of the data
+summary(weather)
+```
+
+```{r}
+# View first 6 rows
+head(weather, n = 6)
+
+# View first 15 rows
+head(weather, n = 15)
+
+# View the last 6 rows
+tail(weather, n  = 6)
+
+# View the last 10 rows
+tail(weather, n = 10)
+```
+
+```{r}
+# Load the tidyr package
+library(tidyr)
+
+# Gather the columns
+weather2 <- gather(weather, time, value, X1:X31, na.rm = TRUE)
+write.csv(weather2,file = "Cleaning Data in R/weather2.csv")
+# View the head
+head(weather2)
+```
+
+```{r}
+# First remove column of row names
+without_x <- weather2[, -1]
+head(without_x)
+# Spread the data
+weather3 <- spread(without_x, measure, value)
+
+# View the head
+str(weather3)
+head(weather3)
+```
+
+```{r}
+# Load the stringr and lubridate packages
+library(stringr)
+library(lubridate)
+
+
+
+weather3 <-  separate(weather3,time,into=c("X","day"))
+# Remove X's from day column
+
+weather3$day <- str_replace(weather3$time,"X","")
+
+# Unite the year, month, and day columns
+weather4 <- unite(weather3, date, year, month, day, sep = "-")
+
+# Convert date column to proper date format using lubridates's ymd()
+weather4$date <- ymd(weather4$date)
+
+# Rearrange columns using dplyr's select()
+weather5 <- select(weather4, date, Events, CloudCover:WindDirDegrees)
+
+# View the head of weather5
+head(weather5)
+```
+
+```{r}
+# View the structure of weather5
+str(weather5)
+
+# Examine the first 20 rows of weather5. Are most of the characters numeric?
+head(weather5, n = 20)
+
+# See what happens if we try to convert PrecipitationIn to numeric
+as.numeric(weather5$PrecipitationIn)
+```
+
+```{r}
+# Replace "T" with "0" (T = trace)
+weather5$PrecipitationIn <- str_replace(weather5$PrecipitationIn,"T","0")
+
+# Convert characters to numerics
+weather6 <- mutate_at(weather5, vars(CloudCover:WindDirDegrees), funs(as.numeric))
+
+# Look at result
+str(weather6)
+```
+
+```{r}
+# Count missing values
+sum(is.na(weather6))
+
+# Find missing values
+summary(weather6)
+
+# Find indices of NAs in Max.Gust.SpeedMPH
+ind <- which(is.na(weather6$Max.Gust.SpeedMPH))
+
+# Look at the full rows for records missing Max.Gust.SpeedMPH
+weather6[ind, ]
+```
+
+```{r}
+# Review distributions for all variables
+summary(weather6)
+
+# Find row with Max.Humidity of 1000
+ind <- which(weather6$Max.Humidity == 1000)
+
+# Look at the data for that day
+weather6[ind, ]
+
+# Change 1000 to 100
+weather6$Max.Humidity[ind] <- 100
+```
+
+```{r}
+# Look at summary of Mean.VisibilityMiles
+summary(weather6$Mean.VisibilityMiles)
+
+# Get index of row with -1 value
+ind <- which(weather6$Mean.VisibilityMiles == -1)
+
+# Look at full row
+weather6[ind,]
+
+# Set Mean.VisibilityMiles to the appropriate value
+weather6$Mean.VisibilityMiles[ind] <- 10
+
+```
+
+```{r}
+# Review summary of full data once more
+summary(weather6)
+
+# Look at histogram for MeanDew.PointF
+hist(weather6$MeanDew.PointF)
+
+# Look at histogram for Min.TemperatureF
+hist(weather6$Min.TemperatureF)
+
+# Compare to histogram for Mean.TemperatureF
+hist(weather6$Mean.TemperatureF)
+```
+
