--- a/RDataScientistTrack1.Rmd
+++ b/RDataScientistTrack1.Rmd
@@ -1,4 +1,4 @@
----
+--- 
 title: "R Data Scientist Track - Data Camp"
 author: "Ajay Kumar"
 date: "1/18/2020"
@@ -32,11 +32,11 @@ Note that the `echo = FALSE` parameter was added to the code chunk to prevent pr
 ## EOF Welcome
 
 # ==== Set Working Dir ==== 
-    ```{r}
-    setwd("")
-
+```{r}
+    dir = "D:/ajkgd/ajk-lab/WsDataCampR/"
+    setwd(dir)
     getwd()
-    ```
+```
 ## EOF Set Working Dir
 
 # ==== DataCamp course track - Data Scientist with R ====
@@ -45,278 +45,287 @@ Note that the `echo = FALSE` parameter was added to the code chunk to prevent pr
 # ==== Introduction to R ====
 ```{r}
   ##  === Arithmetic
-  #An addition``
-  5 + 5 
-  10
-  # A subtraction
-  5 - 5 
-  0
-  # A multiplication
-  3 * 5
-  15
-  # A division
-  (5 + 5) / 2 
-  5
-  # Exponentiation
-  2^5
-  # Modulo
-  28%%6
-  # Assign the value 42 to x
-  x <- 42
+    #An addition``
+    5 + 5 
+    
+    # A subtraction
+     5 - 5 
+    
+    # A multiplication
+     3 * 5
+    
+    # A division
+     (5 + 5) / 2 
   
-  # Print out the value of the variable x
-  x
-  # Assign the value 5 to the variable my_apples
-  my_apples <- 5
-  
-  # Assignement in R
-  # Notice that the assignment operator (‘<-’), which consists of the two characters ‘<’ (“less than”) 
-  # and ‘-’ (“minus”) occurring strictly side-by-side and it ‘points’ to the object receiving the 
-  # value of the expression. In most contexts the ‘=’ operator can be used as an alternative.
-  
-  # Assignment can also be made using the function assign(). An equivalent way of making the same 
-  # assignment as above is with:
-  assign("my_apples",6)
-  my_apples
-  
-  
-  # Print out the value of the variable my_apples
-  my_apples
-  # Assign a value to the variables my_apples and my_oranges
-  my_apples <- 5
-  my_oranges <- 6
-  # Add these two variables together
-  my_apples + my_oranges
-  # Create the variable my_fruit
-  my_fruit <- (my_apples + my_oranges)
-  # Assign a value to the variable my_apples
-  my_apples <- 5 
-  
-  # Fix the assignment of my_oranges
-  my_oranges <- 6 
-  
-  # Create the variable my_fruit and print it out
-  my_fruit <- my_apples + my_oranges 
-  my_fruit
-  # Change my_numeric to be 42
-  my_numeric <- 42
-  
-  # Change my_character to be "universe"
-  my_character <- "universe"
-  
-  # Change my_logical to be FALSE
-  my_logical <- FALSE
-  # Declare variables of different types
-  my_numeric <- 42
-  my_character <- "universe"
-  my_logical <- FALSE 
-  
-  # Check class of my_numeric
-  class(my_numeric)
-  
-  # Check class of my_character
-  class(my_character)
-  
-  # Check class of my_logical
-  class(my_logical)
+    # Exponentiation
+     2^5
+    
+    # Modulo
+     28%%6
+    
+    # Assign the value 42 to x
+     x <- 42
+    
+    # Print out the value of the variable x
+     x
+    
+    # Assign the value 5 to the variable my_apples
+     my_apples <- 5
+    
+    # Assignment in R
+    # Notice that the assignment operator (‘<-’), which consists of the two characters ‘<’ (“less than”) 
+    # and ‘-’ (“minus”) occurring strictly side-by-side and it ‘points’ to the object receiving the 
+    # value of the expression. In most contexts the ‘=’ operator can be used as an alternative.
+    
+    # Assignment can also be made using the function assign(). An equivalent way of making the same 
+    # assignment as above is with:
+      assign("my_apples",6)
+      my_apples
+    
+    
+    # Print out the value of the variable my_apples
+     my_apples
+    
+    # Assign a value to the variables my_apples and my_oranges
+     my_apples <- 5
+     my_oranges <- 6
+    
+    # Add these two variables together
+      my_apples + my_oranges
+    
+    # Create the variable my_fruit
+      my_fruit <- (my_apples + my_oranges)
+    
+    # Assign a value to the variable my_apples
+     my_apples <- 5 
+    
+    # Fix the assignment of my_oranges
+     my_oranges <- 6 
+    
+    # Create the variable my_fruit and print it out
+     my_fruit <- my_apples + my_oranges 
+     my_fruit
+    
+    # Change my_numeric to be 42
+     my_numeric <- 42
+    
+    # Change my_character to be "universe"
+     my_character <- "universe"
+    
+    # Change my_logical to be FALSE
+     my_logical <- FALSE
+    
+     # Declare variables of different types
+      my_numeric <- 42
+      my_character <- "universe"
+      my_logical <- FALSE 
+    
+    # Check class of my_numeric
+      class(my_numeric)
+    
+    # Check class of my_character
+      class(my_character)
+    
+    # Check class of my_logical
+      class(my_logical)
 ```
 ## EOF Introduction to R
 
 # ==== Vector ====
 ``` {r}
   # Define the variable vegas
-  vegas <- "Go!"
-  vegas
-  
-  numeric_vector <- c(1, 10, 49)
-  numeric_vector
-  
-  character_vector <- c("a", "b", "c")
-  character_vector
-  
+    vegas <- "Go!"
+    vegas
+    
+    numeric_vector <- c(1, 10, 49)
+    numeric_vector
+    
+    character_vector <- c("a", "b", "c")
+    character_vector
+    
   # Complete the code for boolean_vector
-  boolean_vector <-c(TRUE,FALSE,TRUE)
-  boolean_vector
+    boolean_vector <-c(TRUE,FALSE,TRUE)
+    boolean_vector
+    
+  # Poker winnings from Monday to Friday
+    poker_vector <- c(140, -50, 20, -120, 240)
+    poker_vector
+    
+  # Roulette winnings from Monday to Friday
+    roulette_vector <- c(-24, -50, 100, -350, 10)  
+    roulette_vector
   
   # Poker winnings from Monday to Friday
-  poker_vector <- c(140, -50, 20, -120, 240)
-  poker_vector
+    poker_vector <- c(140, -50, 20, -120, 240)
   
   # Roulette winnings from Monday to Friday
-  roulette_vector <- c(-24, -50, 100, -350, 10)  
-  roulette_vector
-  
-  # Poker winnings from Monday to Friday
-  poker_vector <- c(140, -50, 20, -120, 240)
-  
-  # Roulette winnings from Monday to Friday
-  roulette_vector <- c(-24, -50, 100, -350, 10)
+    roulette_vector <- c(-24, -50, 100, -350, 10)
   
   # Assign days as names of poker_vector
-  names(poker_vector) <- c("Monday", "Tuesday", "Wednesday", "Thursday", "Friday")
-  poker_vector
+    names(poker_vector) <- c("Monday", "Tuesday", "Wednesday", "Thursday", "Friday")
+    poker_vector
   
   # Assign days as names of roulette_vectors
-  names(roulette_vector) <- c("Monday","Tuesday","Wednesday", "Thursday", "Friday")
-  roulette_vector
+    names(roulette_vector) <- c("Monday","Tuesday","Wednesday", "Thursday", "Friday")
+    roulette_vector
   
   # Poker winnings from Monday to Friday
-  poker_vector <- c(140, -50, 20, -120, 240)
+    poker_vector <- c(140, -50, 20, -120, 240)
   
   # Roulette winnings from Monday to Friday
-  roulette_vector <- c(-24, -50, 100, -350, 10)
+    roulette_vector <- c(-24, -50, 100, -350, 10)
   
   # The variable days_vector
-  days_vector <- c("Monday", "Tuesday", "Wednesday", "Thursday", "Friday")
-  days_vector
+    days_vector <- c("Monday", "Tuesday", "Wednesday", "Thursday", "Friday")
+    days_vector
   
   # Assign the names of the day to roulette_vector and poker_vector
-  names(poker_vector) <-   days_vector
-  poker_vector
+    names(poker_vector) <-   days_vector
+    poker_vector
   
-  names(roulette_vector) <- days_vector
-  roulette_vector
+    names(roulette_vector) <- days_vector
+    roulette_vector
   
-  A_vector <- c(1, 2, 3)
-  B_vector <- c(4, 5, 6)
+    A_vector <- c(1, 2, 3)
+    B_vector <- c(4, 5, 6)
   
   # Take the sum of A_vector and B_vector
-  total_vector <- A_vector + B_vector
+    total_vector <- A_vector + B_vector
   
   # Print out total_vector
-  total_vector
+    total_vector
   
   # Poker and roulette winnings from Monday to Friday:
-  poker_vector <- c(140, -50, 20, -120, 240)
-  roulette_vector <- c(-24, -50, 100, -350, 10)
-  days_vector <- c("Monday", "Tuesday", "Wednesday", "Thursday", "Friday")
-  names(poker_vector) <- days_vector
-  names(roulette_vector) <- days_vector
+    poker_vector <- c(140, -50, 20, -120, 240)
+    roulette_vector <- c(-24, -50, 100, -350, 10)
+    days_vector <- c("Monday", "Tuesday", "Wednesday", "Thursday", "Friday")
+    names(poker_vector) <- days_vector
+    names(roulette_vector) <- days_vector
   
   # Assign to total_daily how much you won/lost on each day
-  total_daily <- poker_vector + roulette_vector
-  total_daily
+    total_daily <- poker_vector + roulette_vector
+    total_daily
   
   # Poker and roulette winnings from Monday to Friday:
-  poker_vector <- c(140, -50, 20, -120, 240)
-  roulette_vector <- c(-24, -50, 100, -350, 10)
-  days_vector <- c("Monday", "Tuesday", "Wednesday", "Thursday", "Friday")
-  names(poker_vector) <- days_vector
-  names(roulette_vector) <- days_vector
+    poker_vector <- c(140, -50, 20, -120, 240)
+    roulette_vector <- c(-24, -50, 100, -350, 10)
+    days_vector <- c("Monday", "Tuesday", "Wednesday", "Thursday", "Friday")
+    names(poker_vector) <- days_vector
+    names(roulette_vector) <- days_vector
   
   # Total winnings with poker
-  total_poker <- sum(poker_vector)
-  total_poker
+    total_poker <- sum(poker_vector)
+    total_poker
   
   # Total winnings with roulette
-  total_roulette <-  sum(roulette_vector)
-  total_roulette
+    total_roulette <-  sum(roulette_vector)
+    total_roulette
   
   # Total winnings overall
-  total_week <- total_poker + total_roulette
-  total_week
+    total_week <- total_poker + total_roulette
+    total_week
   
   # Print out total_week
-  total_week
+    total_week
   
   # Poker and roulette winnings from Monday to Friday:
-  poker_vector <- c(140, -50, 20, -120, 240)
-  roulette_vector <- c(-24, -50, 100, -350, 10)
-  days_vector <- c("Monday", "Tuesday", "Wednesday", "Thursday", "Friday")
-  names(poker_vector) <- days_vector
-  names(roulette_vector) <- days_vector
+    poker_vector <- c(140, -50, 20, -120, 240)
+    roulette_vector <- c(-24, -50, 100, -350, 10)
+    days_vector <- c("Monday", "Tuesday", "Wednesday", "Thursday", "Friday")
+    names(poker_vector) <- days_vector
+    names(roulette_vector) <- days_vector
   
   # Calculate total gains for poker and roulette
-  total_poker <- sum(poker_vector)
-  total_poker
+    total_poker <- sum(poker_vector)
+    total_poker
   
-  total_roulette <- sum(roulette_vector)
-  total_roulette
+    total_roulette <- sum(roulette_vector)
+    total_roulette
   
   # Check if you realized higher total gains in poker than in roulette 
-  total_poker > total_roulette
+    total_poker > total_roulette
   
   # Poker and roulette winnings from Monday to Friday:
-  poker_vector <- c(140, -50, 20, -120, 240)
-  roulette_vector <- c(-24, -50, 100, -350, 10)
-  days_vector <- c("Monday", "Tuesday", "Wednesday", "Thursday", "Friday")
-  names(poker_vector) <- days_vector
-  names(roulette_vector) <- days_vector
+    poker_vector <- c(140, -50, 20, -120, 240)
+    roulette_vector <- c(-24, -50, 100, -350, 10)
+    days_vector <- c("Monday", "Tuesday", "Wednesday", "Thursday", "Friday")
+    names(poker_vector) <- days_vector
+    names(roulette_vector) <- days_vector
   
   # Define a new variable based on a selection
-  poker_wednesday <- poker_vector[3]
-  poker_wednesday
+    poker_wednesday <- poker_vector[3]
+    poker_wednesday
   
   # Poker and roulette winnings from Monday to Friday:
-  poker_vector <- c(140, -50, 20, -120, 240)
-  roulette_vector <- c(-24, -50, 100, -350, 10)
-  days_vector <- c("Monday", "Tuesday", "Wednesday", "Thursday", "Friday")
-  names(poker_vector) <- days_vector
-  names(roulette_vector) <- days_vector
+    poker_vector <- c(140, -50, 20, -120, 240)
+    roulette_vector <- c(-24, -50, 100, -350, 10)
+    days_vector <- c("Monday", "Tuesday", "Wednesday", "Thursday", "Friday")
+    names(poker_vector) <- days_vector
+    names(roulette_vector) <- days_vector
   
   # Define a new variable based on a selection
-  poker_midweek <- poker_vector[c(2, 3, 4)]
-  poker_midweek
+    poker_midweek <- poker_vector[c(2, 3, 4)]
+    poker_midweek
   
-  roulette_selection_vector <- roulette_vector[2:5]
-  roulette_selection_vector
+    roulette_selection_vector <- roulette_vector[2:5]
+    roulette_selection_vector
   
   # Poker and roulette winnings from Monday to Friday:
-  poker_vector <- c(140, -50, 20, -120, 240)
-  roulette_vector <- c(-24, -50, 100, -350, 10)
-  days_vector <- c("Monday", "Tuesday", "Wednesday", "Thursday", "Friday")
-  names(poker_vector) <- days_vector
-  names(roulette_vector) <- days_vector
+    poker_vector <- c(140, -50, 20, -120, 240)
+    roulette_vector <- c(-24, -50, 100, -350, 10)
+    days_vector <- c("Monday", "Tuesday", "Wednesday", "Thursday", "Friday")
+    names(poker_vector) <- days_vector
+    names(roulette_vector) <- days_vector
   
   # Select poker results for Monday, Tuesday and Wednesday
-  poker_start <- poker_vector[c("Monday", "Tuesday", "Wednesday")]
-  poker_start
+    poker_start <- poker_vector[c("Monday", "Tuesday", "Wednesday")]
+    poker_start
   
   # Calculate the average of the elements in poker_start
-  mean(poker_start)
+    mean(poker_start)
   
   # Poker and roulette winnings from Monday to Friday:
-  poker_vector <- c(140, -50, 20, -120, 240)
-  roulette_vector <- c(-24, -50, 100, -350, 10)
-  days_vector <- c("Monday", "Tuesday", "Wednesday", "Thursday", "Friday")
-  names(poker_vector) <- days_vector
-  names(roulette_vector) <- days_vector
+    poker_vector <- c(140, -50, 20, -120, 240)
+    roulette_vector <- c(-24, -50, 100, -350, 10)
+    days_vector <- c("Monday", "Tuesday", "Wednesday", "Thursday", "Friday")
+    names(poker_vector) <- days_vector
+    names(roulette_vector) <- days_vector
   
   # Which days did you make money on poker?
-  selection_vector <- poker_vector[1:5] > 0
-  poker_vector
-  poker_vector[1:5]
-  selection_vector
+    selection_vector <- poker_vector[1:5] > 0
+    poker_vector
+    poker_vector[1:5]
+    selection_vector
   
   
   # Poker and roulette winnings from Monday to Friday:
-  poker_vector <- c(140, -50, 20, -120, 240)
-  roulette_vector <- c(-24, -50, 100, -350, 10)
-  days_vector <- c("Monday", "Tuesday", "Wednesday", "Thursday", "Friday")
-  names(poker_vector) <- days_vector
-  names(roulette_vector) <- days_vector
+    poker_vector <- c(140, -50, 20, -120, 240)
+    roulette_vector <- c(-24, -50, 100, -350, 10)
+    days_vector <- c("Monday", "Tuesday", "Wednesday", "Thursday", "Friday")
+    names(poker_vector) <- days_vector
+    names(roulette_vector) <- days_vector
   
   # Which days did you make money on poker?
-  selection_vector <- poker_vector > 0
+    selection_vector <- poker_vector > 0
   
   # Select from poker_vector these days
-  poker_winning_days <- poker_vector[selection_vector]
-  poker_winning_days
+    poker_winning_days <- poker_vector[selection_vector]
+    poker_winning_days
   
   # Poker and roulette winnings from Monday to Friday:
-  poker_vector <- c(140, -50, 20, -120, 240)
-  roulette_vector <- c(-24, -50, 100, -350, 10)
-  days_vector <- c("Monday", "Tuesday", "Wednesday", "Thursday", "Friday")
-  names(poker_vector) <- days_vector
-  names(roulette_vector) <- days_vector
+    poker_vector <- c(140, -50, 20, -120, 240)
+    roulette_vector <- c(-24, -50, 100, -350, 10)
+    days_vector <- c("Monday", "Tuesday", "Wednesday", "Thursday", "Friday")
+    names(poker_vector) <- days_vector
+    names(roulette_vector) <- days_vector
   
   # Which days did you make money on roulette?
-  selection_vector <- roulette_vector > 0
-  selection_vector
+    selection_vector <- roulette_vector > 0
+    selection_vector
   
   # Select from roulette_vector these days
-  roulette_winning_days <- roulette_vector[selection_vector]
-  roulette_winning_days
+    roulette_winning_days <- roulette_vector[selection_vector]
+    roulette_winning_days
 ```
 ## EOF Vector
 
@@ -801,9 +810,8 @@ Note that the `echo = FALSE` parameter was added to the code chunk to prevent pr
   !(!(x < 4) & !!!(y > 12))
   
   # li_df is pre-loaded in your workspace
-  setwd("/Volumes/Data/ajkgd/DS/WS_R/DataCamp/")
-  li_df <- read.csv("li_df.csv",header = TRUE)
-  li_df
+  li_df <- read.csv("ConditionalsAndControlFlow/li_df.csv",header = TRUE)
+  write.csv(li_df)
   
   # Select the second column, named day2, from li_df: second
   second <- li_df$day2
@@ -892,7 +900,7 @@ Note that the `echo = FALSE` parameter was added to the code chunk to prevent pr
 ## EOF Conditionals and Control Flow
 
 # ==== Loops ====
-  ```{r}
+```{r}
   # Initialize the speed variable
   speed <- 64
   
@@ -1075,7 +1083,7 @@ Note that the `echo = FALSE` parameter was added to the code chunk to prevent pr
   facebook <- c(17, 7, 5, 16, 8, 13, 14)
   
   # Calculate average number of views
-  avg_li <- mean(linkedini)
+  avg_li <- mean(linkedin)
   avg_fb <- mean(facebook)  
   
   print(avg_li)
